tecnicas-compilacion-master/build/TP1Parser.java
// Generated from /home/lucho/Desktop/test_2/tecnicas-compilacion-master/build/TP1.g4 by ANTLR 4.8

  package ANTLRules;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TP1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, FLOAT=2, CURLY_BRACKET_OPEN=3, CURLY_BRACKET_CLOSE=4, SQUARE_BRACKET_OPEN=5, 
		SQUARE_BRACKET_CLOSE=6, PARENS_OPEN=7, PARENS_CLOSE=8, SEMICOLON=9, COMMA=10, 
		EQUALS=11, COMPARISON=12, MINOR_THAN=13, MINOR_OR_EQUAL_THAN=14, GREATER_OR_EQUAL_THAN=15, 
		GREATER_THAN=16, ADDITION=17, SUBSTRACTION=18, PRODUCT=19, DIVISION=20, 
		MODULE=21, AND=22, OR=23, NOT=24, DATA_TYPE_CHAR=25, DATA_TYPE_SHORT=26, 
		DATA_TYPE_INT=27, DATA_TYPE_LONG=28, DATA_TYPE_FLOAT=29, DATA_TYPE_DOUBLE=30, 
		DATA_TYPE_VOID=31, CS_IF=32, CS_FOR=33, CS_WHILE=34, IDENTIFIER=35, COMMENT=36, 
		WS=37;
	public static final int
		RULE_s = 0, RULE_instructions = 1, RULE_assignation = 2, RULE_code_block = 3, 
		RULE_data_type = 4, RULE_arithmetic_operator = 5, RULE_logical_operator = 6, 
		RULE_expression = 7, RULE_token_expression = 8, RULE_logical_expression = 9, 
		RULE_arithmetical_operation = 10, RULE_logical_operation = 11, RULE_variable_declaration = 12, 
		RULE_variable_list = 13, RULE_declarations = 14, RULE_parameter_list = 15, 
		RULE_parameter_list_for_function_declaration = 16, RULE_function_declaration = 17, 
		RULE_function_definition = 18, RULE_function = 19, RULE_if_structure = 20, 
		RULE_while_structure = 21, RULE_for_initialization = 22, RULE_for_expression = 23, 
		RULE_for_structure = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "instructions", "assignation", "code_block", "data_type", "arithmetic_operator", 
			"logical_operator", "expression", "token_expression", "logical_expression", 
			"arithmetical_operation", "logical_operation", "variable_declaration", 
			"variable_list", "declarations", "parameter_list", "parameter_list_for_function_declaration", 
			"function_declaration", "function_definition", "function", "if_structure", 
			"while_structure", "for_initialization", "for_expression", "for_structure"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'{'", "'}'", "'['", "']'", "'('", "')'", "';'", "','", 
			"'='", "'=='", "'<'", "'<='", "'>='", "'>'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'&&'", "'||'", "'!'", "'char'", "'short'", "'int'", "'long'", 
			"'float'", "'double'", "'void'", "'if'", "'for'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT", "FLOAT", "CURLY_BRACKET_OPEN", "CURLY_BRACKET_CLOSE", "SQUARE_BRACKET_OPEN", 
			"SQUARE_BRACKET_CLOSE", "PARENS_OPEN", "PARENS_CLOSE", "SEMICOLON", "COMMA", 
			"EQUALS", "COMPARISON", "MINOR_THAN", "MINOR_OR_EQUAL_THAN", "GREATER_OR_EQUAL_THAN", 
			"GREATER_THAN", "ADDITION", "SUBSTRACTION", "PRODUCT", "DIVISION", "MODULE", 
			"AND", "OR", "NOT", "DATA_TYPE_CHAR", "DATA_TYPE_SHORT", "DATA_TYPE_INT", 
			"DATA_TYPE_LONG", "DATA_TYPE_FLOAT", "DATA_TYPE_DOUBLE", "DATA_TYPE_VOID", 
			"CS_IF", "CS_FOR", "CS_WHILE", "IDENTIFIER", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TP1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TP1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SContext extends ParserRuleContext {
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			instructions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public AssignationContext assignation() {
			return getRuleContext(AssignationContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(TP1Parser.SEMICOLON, 0); }
		public If_structureContext if_structure() {
			return getRuleContext(If_structureContext.class,0);
		}
		public While_structureContext while_structure() {
			return getRuleContext(While_structureContext.class,0);
		}
		public For_structureContext for_structure() {
			return getRuleContext(For_structureContext.class,0);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitInstructions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitInstructions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instructions);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				declarations();
				setState(53);
				instructions();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				code_block();
				setState(56);
				instructions();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				function();
				setState(59);
				instructions();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				assignation();
				setState(62);
				match(SEMICOLON);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(64);
				if_structure();
				setState(65);
				instructions();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				while_structure();
				setState(68);
				instructions();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(70);
				for_structure();
				setState(71);
				instructions();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TP1Parser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(TP1Parser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterAssignation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitAssignation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitAssignation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignationContext assignation() throws RecognitionException {
		AssignationContext _localctx = new AssignationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(IDENTIFIER);
			setState(77);
			match(EQUALS);
			setState(78);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Code_blockContext extends ParserRuleContext {
		public TerminalNode CURLY_BRACKET_OPEN() { return getToken(TP1Parser.CURLY_BRACKET_OPEN, 0); }
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public TerminalNode CURLY_BRACKET_CLOSE() { return getToken(TP1Parser.CURLY_BRACKET_CLOSE, 0); }
		public Code_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterCode_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitCode_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitCode_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Code_blockContext code_block() throws RecognitionException {
		Code_blockContext _localctx = new Code_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_code_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(CURLY_BRACKET_OPEN);
			setState(81);
			instructions();
			setState(82);
			match(CURLY_BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_typeContext extends ParserRuleContext {
		public TerminalNode DATA_TYPE_CHAR() { return getToken(TP1Parser.DATA_TYPE_CHAR, 0); }
		public TerminalNode DATA_TYPE_DOUBLE() { return getToken(TP1Parser.DATA_TYPE_DOUBLE, 0); }
		public TerminalNode DATA_TYPE_FLOAT() { return getToken(TP1Parser.DATA_TYPE_FLOAT, 0); }
		public TerminalNode DATA_TYPE_INT() { return getToken(TP1Parser.DATA_TYPE_INT, 0); }
		public TerminalNode DATA_TYPE_LONG() { return getToken(TP1Parser.DATA_TYPE_LONG, 0); }
		public TerminalNode DATA_TYPE_SHORT() { return getToken(TP1Parser.DATA_TYPE_SHORT, 0); }
		public TerminalNode DATA_TYPE_VOID() { return getToken(TP1Parser.DATA_TYPE_VOID, 0); }
		public Data_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterData_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitData_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitData_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_typeContext data_type() throws RecognitionException {
		Data_typeContext _localctx = new Data_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_data_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DATA_TYPE_CHAR) | (1L << DATA_TYPE_SHORT) | (1L << DATA_TYPE_INT) | (1L << DATA_TYPE_LONG) | (1L << DATA_TYPE_FLOAT) | (1L << DATA_TYPE_DOUBLE) | (1L << DATA_TYPE_VOID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arithmetic_operatorContext extends ParserRuleContext {
		public TerminalNode ADDITION() { return getToken(TP1Parser.ADDITION, 0); }
		public TerminalNode SUBSTRACTION() { return getToken(TP1Parser.SUBSTRACTION, 0); }
		public TerminalNode DIVISION() { return getToken(TP1Parser.DIVISION, 0); }
		public TerminalNode PRODUCT() { return getToken(TP1Parser.PRODUCT, 0); }
		public TerminalNode MODULE() { return getToken(TP1Parser.MODULE, 0); }
		public Arithmetic_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterArithmetic_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitArithmetic_operator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitArithmetic_operator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arithmetic_operatorContext arithmetic_operator() throws RecognitionException {
		Arithmetic_operatorContext _localctx = new Arithmetic_operatorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arithmetic_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADDITION) | (1L << SUBSTRACTION) | (1L << PRODUCT) | (1L << DIVISION) | (1L << MODULE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_operatorContext extends ParserRuleContext {
		public TerminalNode COMPARISON() { return getToken(TP1Parser.COMPARISON, 0); }
		public TerminalNode MINOR_THAN() { return getToken(TP1Parser.MINOR_THAN, 0); }
		public TerminalNode MINOR_OR_EQUAL_THAN() { return getToken(TP1Parser.MINOR_OR_EQUAL_THAN, 0); }
		public TerminalNode GREATER_OR_EQUAL_THAN() { return getToken(TP1Parser.GREATER_OR_EQUAL_THAN, 0); }
		public TerminalNode GREATER_THAN() { return getToken(TP1Parser.GREATER_THAN, 0); }
		public TerminalNode AND() { return getToken(TP1Parser.AND, 0); }
		public TerminalNode OR() { return getToken(TP1Parser.OR, 0); }
		public Logical_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterLogical_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitLogical_operator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitLogical_operator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logical_operatorContext logical_operator() throws RecognitionException {
		Logical_operatorContext _localctx = new Logical_operatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_logical_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMPARISON) | (1L << MINOR_THAN) | (1L << MINOR_OR_EQUAL_THAN) | (1L << GREATER_OR_EQUAL_THAN) | (1L << GREATER_THAN) | (1L << AND) | (1L << OR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Arithmetical_operationContext arithmetical_operation() {
			return getRuleContext(Arithmetical_operationContext.class,0);
		}
		public Token_expressionContext token_expression() {
			return getRuleContext(Token_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expression);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				arithmetical_operation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				token_expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Token_expressionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TP1Parser.IDENTIFIER, 0); }
		public TerminalNode INT() { return getToken(TP1Parser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(TP1Parser.FLOAT, 0); }
		public Token_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_token_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterToken_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitToken_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitToken_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Token_expressionContext token_expression() throws RecognitionException {
		Token_expressionContext _localctx = new Token_expressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_token_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << IDENTIFIER))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_expressionContext extends ParserRuleContext {
		public Token_expressionContext token_expression() {
			return getRuleContext(Token_expressionContext.class,0);
		}
		public TerminalNode NOT() { return getToken(TP1Parser.NOT, 0); }
		public Logical_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterLogical_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitLogical_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitLogical_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logical_expressionContext logical_expression() throws RecognitionException {
		Logical_expressionContext _localctx = new Logical_expressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_logical_expression);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				token_expression();
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(NOT);
				setState(98);
				token_expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arithmetical_operationContext extends ParserRuleContext {
		public Token_expressionContext token_expression() {
			return getRuleContext(Token_expressionContext.class,0);
		}
		public Arithmetic_operatorContext arithmetic_operator() {
			return getRuleContext(Arithmetic_operatorContext.class,0);
		}
		public Arithmetical_operationContext arithmetical_operation() {
			return getRuleContext(Arithmetical_operationContext.class,0);
		}
		public Arithmetical_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetical_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterArithmetical_operation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitArithmetical_operation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitArithmetical_operation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arithmetical_operationContext arithmetical_operation() throws RecognitionException {
		Arithmetical_operationContext _localctx = new Arithmetical_operationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_arithmetical_operation);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				token_expression();
				setState(102);
				arithmetic_operator();
				setState(103);
				arithmetical_operation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				token_expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_operationContext extends ParserRuleContext {
		public Logical_expressionContext logical_expression() {
			return getRuleContext(Logical_expressionContext.class,0);
		}
		public Logical_operatorContext logical_operator() {
			return getRuleContext(Logical_operatorContext.class,0);
		}
		public Logical_operationContext logical_operation() {
			return getRuleContext(Logical_operationContext.class,0);
		}
		public Logical_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).enterLogical_operation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP1Listener ) ((TP1Listener)listener).exitLogical_operation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP1Visitor ) return ((TP1Visitor<? extends T>)visitor).visitLogical_operation(this);
			else return visitor.visitChildren(this);
		}
	}
